tests/integration/snapshots/integration__conformance__n_number_neg_int_starting_with_zero.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[-012]
stderr ---
error: unexpected leading zero
 --> stdin:1:2
  |
1 | [-012]
  |  ^-
  |   |
  |   first zero found here
  |
help: remove the leading zeros
  |
1 - [-012]
1 + [-12]
  |
